--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-weight: 100 900; /* This enables the variable font weight range */
 }
 
+body {
+  background-color: var(--surface-00);
+}
+
 :root {
   --primary-100: #daeeff;
   --primary-200: #6fc3ff;
